--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ ninja
 tabulate
 psutil
 tensorboard
+onnxruntime
+openvino-dev
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
