new Docker files

--- a/Docker_Files/Dockerfile
+++ b/Docker_Files/Dockerfile
@@ -6,7 +6,11 @@ COPY . /data/catflap
 
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys A4B469963BF863CC && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y python3-pip python3-dev python-is-python3 ffmpeg libsm6 libxext6 git && \
+    apt-get install -y curl && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
+    echo "deb https://packages.cloud.google.com/apt coral-edgetpu-stable main" | tee /etc/apt/sources.list.d/coral-edgetpu.list && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y python3-pip python3-dev python-is-python3 ffmpeg libsm6 libxext6 git edgetpu-compiler && \
     python3 -m pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt && \
     rm -rf /var/lib/apt/lists/* && \
