--- a/Docker_Files/compose.yaml
+++ b/Docker_Files/compose.yaml
@@ -7,6 +7,11 @@ services:
     ipc: host
     volumes:
       - type: bind
+        source: /tmp/.X11-unix
+        target: /tmp/.X11-unix
+        bind:
+          selinux: z
+      - type: bind
         source: /data/catflap/catflap_pictures
         target: /data/catflap/catflap_pictures
         bind:
@@ -36,12 +41,15 @@ services:
         target: /data/catflap/yolox/datasets/VOCdevkit/VOC2022/ImageSets/Main
         bind:
           selinux: z
+    environment:
+      - DISPLAY=$DISPLAY
     command: bash -c "jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3" 
             #command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & disown" 
       #&& python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights.pth --cache 
       #&& python tools/export_onnx.py --output-name YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx -f yolox_nano_custom_options.py -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
       #&& mo --input_model YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx --input_shape [1,3,320,320] --data_type FP16 --output_dir YOLOX_outputs/yolox_nano_custom_options/FP16
-      #&& tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json"
+      #&& tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
+      #&& python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_float32.tflite --label labels.txt --imagepath /home/k4is0r/catflap_images/catflap_images_nanodet/voc_ds/2021-08-03__T08-19-53-71__0.55859375.png"
     stdin_open: true
     tty: true
     deploy:
