--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# TODO: Update with exact module version
 numpy
 torch>=1.7
 opencv_python
@@ -10,11 +9,20 @@ ninja
 tabulate
 psutil
 tensorboard
-onnxruntime
-openvino-dev
+jupyter
+glob2
+#tensorrt-cu11
+openvino==2021.4.2
+openvino-dev==2021.4.2
+#tensorflow==2.11.1
+tensorflow
+gdown
+onnx==1.8.1
+onnxruntime==1.8.0
+onnx-simplifier==0.3.5
+tflite_runtime==2.11.0
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
-onnx>=1.13.0
-onnx-simplifier==0.4.10
+tensorflow-datasets
