--- a/Docker_Files/compose.yaml
+++ b/Docker_Files/compose.yaml
@@ -4,6 +4,7 @@ services:
       context: .
     ports:
       - 8888:8888
+    image: k4is0r/catflap:yolox_dockerimage_20240606
     ipc: host
     volumes:
       - type: bind
