--- a/compose.yaml
+++ b/compose.yaml
@@ -24,11 +24,6 @@ services:
         bind:
           selinux: z
       - type: bind
-        source: /mnt/raid0/Privat/Fotos/catflap_pics/unsortiert
-        target: /data/catflap/catflap_pictures_unsortiert
-        bind:
-          selinux: z
-      - type: bind
         source: /data/catflap/catflap_files/pytorch_models/yolox/YOLOX_outputs/
         target: /data/catflap/yolox/YOLOX_outputs
         bind:
@@ -50,8 +45,17 @@ services:
           selinux: z
     environment:
       - DISPLAY=$DISPLAY
-        #command: find /data/catflap/catflap_pictures_unsortiert/orig/no_cat/ -type f -exec bash -c "python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_float32.tflite --label labels.txt --imagepath {} --save /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/vis_res/" \;
-    command: tail -f /dev/null
+        #command: tail -f /dev/null
+    command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & disown
+          && nohup tensorboard --logdir /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/tensorboard --bind_all & disown
+          && python tools/train.py -f yolox_nano_custom_options.py --resume --fp16 -o -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth 
+          && python tools/export_onnx.py --output-name YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx -f yolox_nano_custom_options.py -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
+          && mo --input_model YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx --input_shape [1,3,320,320] --data_type FP16 --output_dir YOLOX_outputs/yolox_nano_custom_options/FP16
+          && tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
+          && python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_float32.tflite --label labels.txt --imagepath /data/catflap/yolox/datasets/VOCdevkit/VOC2022/PNGImages/2021-08-03__T08-19-53-71__0.55859375.png
+          && edgetpu_compiler -s YOLOX_outputs/yolox_nano_custom_options/saved_model/model_full_integer_quant.tflite YOLOX_outputs/yolox_nano_custom_options/saved_model/saved_model_20240508-135145_post_quant.tflite
+          && mv saved_model_* model_full_integer_quant.tflite YOLOX_outputs/yolox_nano_custom_options/
+          && tail -f /dev/null" 
     stdin_open: true
     tty: true
     deploy:
