--- a/compose_test.yaml
+++ b/compose_test.yaml
@@ -51,7 +51,7 @@ services:
     environment:
       - DISPLAY=$DISPLAY
         #command: find /data/catflap/catflap_pictures_unsortiert/orig/no_cat/ -type f -exec bash -c "python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_float32.tflite --label labels.txt --imagepath {} --save /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/vis_res/" \;
-    command: tail -f /dev/null
+    command: bash -c "jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3" 
     stdin_open: true
     tty: true
     deploy:
