--- a/compose.yaml
+++ b/compose.yaml
@@ -46,9 +46,9 @@ services:
     environment:
       - DISPLAY=$DISPLAY
         #&& python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights.pth
-    command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & disown
-          && nohup tensorboard --logdir /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/tensorboard --bind_all & disown
-          && python tools/train.py -f yolox_nano_custom_options.py --fp16 --resume -o -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
+    command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & 
+          nohup tensorboard --logdir /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/tensorboard --bind_all & 
+          python tools/train.py -f yolox_nano_custom_options.py --fp16 --resume -o -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
           && python tools/export_onnx.py --output-name YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx -f yolox_nano_custom_options.py -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
           && mo --input_model YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx --input_shape [1,3,320,320] --data_type FP16 --output_dir YOLOX_outputs/yolox_nano_custom_options/FP16
           && tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
