--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - 8888:8888
       - 6006:6006
-    image: k4is0r/catflap:yolox_dockerimage_latest
+    image: k4is0r/catflap:yolox_dockerimage_20240711
     ipc: host
     volumes:
       - type: bind
@@ -45,20 +45,19 @@ services:
           selinux: z
     environment:
       - DISPLAY=$DISPLAY
-        #&& python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights.pth
     command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & 
           nohup tensorboard --logdir /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/tensorboard --bind_all & 
           test -f YOLOX_outputs/yolox_nano_custom_options/latest_ckpt.pth
           && python tools/train.py -f yolox_nano_custom_options.py --fp16 --resume -o
-          || python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights.pth
+          || python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights_ti.pth
           && python tools/export_onnx.py --output-name YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx -f yolox_nano_custom_options.py -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
           && mo --input_model YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx --input_shape [1,3,320,320] --data_type FP16 --output_dir YOLOX_outputs/yolox_nano_custom_options/FP16
-          && tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
-          && python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_full_integer_quant.tflite --label labels.txt --imagepath /data/catflap/yolox/datasets/VOCdevkit/VOC2022/PNGImages/2021-08-03__T08-19-53-71__0.55859375.png
-          && edgetpu_compiler -s YOLOX_outputs/yolox_nano_custom_options/saved_model/model_full_integer_quant.tflite YOLOX_outputs/saved_model_20240508-135145_post_quant.tflite
-          && mkdir YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
-          && mv saved_model_* model_full_integer_quant_edgetpu.* YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
           && tail -f /dev/null" 
+          #&& tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
+          #&& python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/saved_model/model_full_integer_quant.tflite --label labels.txt --imagepath /data/catflap/yolox/datasets/VOCdevkit/VOC2022/PNGImages/2021-08-03__T08-19-53-71__0.55859375.png
+          #&& edgetpu_compiler -s YOLOX_outputs/yolox_nano_custom_options/saved_model/model_full_integer_quant.tflite YOLOX_outputs/saved_model_20240508-135145_post_quant.tflite
+          #&& mkdir YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
+          #&& mv saved_model_* model_full_integer_quant_edgetpu.* YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
     stdin_open: true
     tty: true
     deploy:
