--- a/compose.yaml
+++ b/compose.yaml
@@ -78,8 +78,7 @@ services:
           #&& mo --input_model YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx --input_shape [1,3,320,320] --data_type FP16 --output_dir YOLOX_outputs/yolox_nano_custom_options/FP16
           #&& tools/openvino2tensorflow --model_path YOLOX_outputs/yolox_nano_custom_options/FP16/best_ckpt.xml --model_output_path YOLOX_outputs/yolox_nano_custom_options/saved_model --output_saved_model --output_pb --output_no_quant_float32_tflite --output_integer_quant_type 'uint8' --string_formulas_for_normalization 'data / 255' --output_edgetpu --weight_replacement_config replace.json
           #&& python demo/yolox_tflite_demo.py --model YOLOX_outputs/yolox_nano_custom_options/onnx2tf/best_ckpt_full_integer_quant.tflite --label labels.txt --imagepath /data/catflap/yolox/datasets/VOCdevkit/VOC2022/PNGImages/2021-08-03__T08-19-53-71__0.55859375.png
-          #&& edgetpu_compiler -s YOLOX_outputs/yolox_nano_custom_options/onnx2tf/best_ckpt_full_integer_quant.tflite YOLOX_outputs/saved_model_20240508-135145_post_quant.tflite
-          #&& mv saved_model_* best_ckpt_full_integer_quant_edgetpu.* YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
+          #&& edgetpu_compiler -o YOLOX_outputs/yolox_nano_custom_options/ENDRESULT -s YOLOX_outputs/yolox_nano_custom_options/onnx2tf/best_ckpt_full_integer_quant.tflite YOLOX_outputs/saved_model_20240508-135145_post_quant.tflite
     stdin_open: true
     tty: true
     deploy:
