--- a/yolox/requirements.txt
+++ b/yolox/requirements.txt
@@ -9,6 +9,15 @@ ninja
 tabulate
 psutil
 tensorboard
+
+# verified versions
+# pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
+pycocotools>=2.0.2
+
+# catflap_yolox
+onnx==1.8.1
+onnxruntime==1.8.0
+onnx-simplifier==0.3.5
 torch_tb_profiler
 jupyter
 glob2
@@ -18,13 +27,6 @@ openvino-dev==2021.4.2
 #tensorflow==2.11.1
 tensorflow
 gdown
-onnx==1.8.1
-onnxruntime==1.8.0
-onnx-simplifier==0.3.5
 tflite_runtime==2.11.0
-
-# verified versions
-# pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
-pycocotools>=2.0.2
 tensorflow-datasets
 
