--- a/compose.yaml
+++ b/compose.yaml
@@ -70,8 +70,8 @@ services:
     command: bash -c "nohup jupyter notebook --NotebookApp.allow_origin='https://colab.research.google.com' --ip='0.0.0.0' --port=8888 --no-browser --allow-root --NotebookApp.port_retries=0 --NotebookApp.token=s3cur3 & 
           nohup tensorboard --logdir /data/catflap/yolox/YOLOX_outputs/yolox_nano_custom_options/tensorboard --bind_all & 
           test -f YOLOX_outputs/yolox_nano_custom_options/latest_ckpt.pth
-          && python tools/train.py -f yolox_nano_custom_options.py --fp16 --resume -o
-          || python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights_ti.pth
+          && python tools/train.py -f yolox_nano_custom_options.py --fp16 --resume -o --cache
+          || python tools/train.py -f yolox_nano_custom_options.py --fp16 -o -c yolox_nano_weights_ti.pth --cache
           && python tools/export_onnx.py --output-name YOLOX_outputs/yolox_nano_custom_options/best_ckpt.onnx -f yolox_nano_custom_options.py -c YOLOX_outputs/yolox_nano_custom_options/best_ckpt.pth
           && mkdir YOLOX_outputs/yolox_nano_custom_options/ENDRESULT
           && tail -f /dev/null"
